# ashid

./: .gitignore  CHANGELOG.md  CONTRIBUTING.md  LICENSE  README.md
.github/: PULL_REQUEST_TEMPLATE.md
.github/ISSUE_TEMPLATE/: bug_report.md  config.yml  feature_request.md
.github/workflows/: ci-go.yml  ci-kotlin.yml  ci-python.yml  ci-rust.yml  ci-typescript.yml  ci.yml  publish-maven.yml  publish-npm.yml
docs/: comparison.md  design-decisions.md  migration-guide.md
examples/java/: BasicUsage.java
examples/kotlin/: BasicUsage.kt
examples/typescript/: basic-usage.ts
go/: README.md  ashid.go  ashid_test.go  bench_test.go  encoder.go  encoder_test.go  go.mod
java/: README.md  build.gradle.kts  gradlew  settings.gradle.kts
java/examples/: BasicUsage.java
java/src/main/java/agency/wilde/ashid/: Ashid.java  EncoderBase32Crockford.java
java/src/test/java/agency/wilde/ashid/: AshidTest.java  EncoderBase32CrockfordTest.java
kotlin/: build.gradle.kts  gradle.properties
kotlin/examples/: BasicUsage.kt
kotlin/src/main/kotlin/agency/wilde/ashid/: AshId.kt  EncoderBase32Crockford.kt
kotlin/src/test/kotlin/agency/wilde/ashid/: AshIdTest.kt  EncoderBase32CrockfordTest.kt
python/: README.md  pyproject.toml
python/src/ashid/: __init__.py  _ashid.py  _encoder.py
python/tests/: test_ashid.py  test_encoder.py
rust/: Cargo.toml  README.md
rust/src/: ashid.rs  encoder.rs  error.rs  lib.rs
rust/tests/: ashid_test.rs  encoder_test.rs
typescript/: .eslintrc.json  .npmignore  CONTRIBUTING.md  README.md  ashid-1.0.0.tgz  niceid-1.0.0.tgz  package.json  pnpm-lock.yaml  tsconfig.json  vitest.config.ts
typescript/examples/: basic-usage.ts
typescript/src/: ashid.ts  encoder.ts  index.ts
typescript/test/: ashid.test.ts  encoder.test.ts
